// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering inactive step 1`] = `null`;

exports[`Rendering non-closable active step, may not proceed 1`] = `
<Dialog
  actions={
    Array [
      Object {
        "buttonTestId": undefined,
        "buttonText": "Proceed",
        "buttonVariant": "primary",
        "callback": [MockFunction],
        "disabled": true,
        "id": "proceed",
      },
    ]
  }
  show={true}
  size="lg"
>
  <React.Fragment>
    <h2>
      Title
    </h2>
    <p>
      Content
    </p>
  </React.Fragment>
</Dialog>
`;

exports[`Rendering non-closable active step, may proceed 1`] = `
<Dialog
  actions={
    Array [
      Object {
        "buttonTestId": undefined,
        "buttonText": "Proceed",
        "buttonVariant": "primary",
        "callback": [MockFunction],
        "disabled": false,
        "id": "proceed",
      },
    ]
  }
  show={true}
  size="lg"
>
  <React.Fragment>
    <h2>
      Title
    </h2>
    <p>
      Content
    </p>
  </React.Fragment>
</Dialog>
`;
